feat: config Prisma with D1, add sample APIs

--- a/package.json
+++ b/package.json
@@ -6,22 +6,31 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "pages:build": "npx @cloudflare/next-on-pages@1",
+    "db:generate": "prisma generate --schema=src/server/databases/schema.prisma",
+    "db:apply": "npx wrangler d1 migrations apply"
   },
   "dependencies": {
+    "@cloudflare/workers-types": "^4.20250224.0",
+    "@prisma/adapter-d1": "^6.4.1",
+    "@prisma/client": "^6.4.1",
+    "next": "15.2.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.2.0"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@cloudflare/next-on-pages": "^1.13.8",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
-    "@eslint/eslintrc": "^3"
+    "prisma": "^6.4.1",
+    "tailwindcss": "^4",
+    "typescript": "^5",
+    "wrangler": "^3.57.1"
   }
 }
