--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "db:generate": "prisma generate --schema=src/server/databases/schema.prisma",
     "db:migrate": "npx wrangler d1 migrations apply"
   },
+  "postinstall": "npx prisma generate --schema src/server/databases/schema.prisma",
   "dependencies": {
     "@cloudflare/workers-types": "^4.20250224.0",
     "@prisma/adapter-d1": "^6.4.1",
