--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "pages:build": "pnpm dlx @cloudflare/next-on-pages",
-    "db:generate": "prisma generate --schema=src/server/databases/schema.prisma",
+    "pages:build": "pnpm run db:init && pnpm dlx @cloudflare/next-on-pages",
+    "db:init": "npx prisma generate --schema=src/server/databases/schema.prisma",
     "db:migrate": "npx wrangler d1 migrations apply"
   },
   "postinstall": "npx prisma generate --schema src/server/databases/schema.prisma",
